    maintainer tests in the future.
  * Switch to git-dpm for managing debian/patches
    + generate the patchlevel information from debian/patches at build time.
  * Multiarch related fixes:
    + h2ph now correctly gets the header directories from gcc (Closes: #625808)
    + ODBM_File hints find libgdbm_compat again (Closes: #625634)

  [ Dominic Hargreaves ]
  * Note removal of perl-suid in README.Debian and suggest alternatives
    (Closes: #628042)
  * Lengthen time-out in t/re/re.t; fixes FTBFS on sh4 (Closes: #626125)
  * Add note about git format-patch signatures to git-dpm section of
    README.source
  * Revert obsolete patches:
    - debian/arm_optim.diff
    - debian/devel-ppport-ia64-optim.diff

 -- Dominic Hargreaves <dom@earth.li>  Fri, 10 Jun 2011 17:47:24 +0100

perl (5.12.3-7) unstable; urgency=low

  * Fix failing tilde test when run under a UID without a passwd entry
    (Closes: #624850)
  * Adjust debian/check-control to work with strict version checks
    and release candidates
  * Add Breaks: mrtg (<< 2.16.3-3.1) (see #625695)
  * Add Breaks, Replaces, Provides for new dual-lived modules
    libshell-perl, libdevel-dprof-perl
  * Add Replaces, Provides for new deprecation module
    libperl4-corelibs-perl

 -- Dominic Hargreaves <dom@earth.li>  Thu, 19 May 2011 19:16:22 +0100

perl (5.12.3-6) unstable; urgency=low

  * Upload to unstable.

 -- Dominic Hargreaves <dom@earth.li>  Sun, 01 May 2011 17:40:10 +0100

perl (5.12.3-5) experimental; urgency=low

  * Add new debian/check-control script written by Niko, backported
    from 5.14 tree. This is used by maintainer targets in debian/rules
    to check Provides/Replaces/Breaks against bundled modules.
  * Apply upstream fix for Module::Corelist version number
  * Correct various Breaks version numbers and add Breaks, Replaces,
    Provides for new or missing dual-lived modules:
    - libmath-complex-perl
    - libextutils-command-perl
    - libdigest-perl
    - libextutils-install-perl
